# crawl-comic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  bun.lockb  clearDb.py  main.py  package.json  requirement.txt  test.json  todo.md
.cargo/: config.toml
be/: .gitignore  Dockerfile  Jenkinsfile  bun.lockb  package.json
be/events/: init.sql
be/prisma/: schema.prisma
be/src/: index.ts
be/src/db/: index.ts
be/src/router/: api.ts  cdn.ts  index.ts
be/src/typings/: index.ts
be/src/utils/: fetchComicInfo.ts  index.ts
fe/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
fe/src/: constant.ts
fe/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
fe/src/app/api/image/: route.ts
fe/src/app/chapter/[id]/: page.tsx
fe/src/app/comic/[id]/: ComicById.tsx  page.tsx
fe/src/app/dataset/image/: page.tsx
fe/src/app/help/: page.tsx
fe/src/app/help/chapter/: page.tsx
fe/src/app/help/comic/: page.tsx
fe/src/app/search/: page.tsx
fe/src/components/: ComicCard.tsx  ListComic.tsx  Search.tsx  Sidebar.tsx  loading.tsx  toast.tsx
fe/src/typings/: index.ts
modules/: blogtruyenmoi.py  nettruyenff.py
prisma/: schema.prisma
proxy/: proxy.txt  proxy1.txt  testProxy.py
src/: index.ts  main.rs  prisma.rs
src/db/: mod.rs
src/modules/: alyasometimeshidesherfeelings.rs  blogtruyenmoi.rs  mangajuice.rs  mod.rs  nettruyenee.rs
src/routes/: index.ts
src/types/: mod.rs  thread_message.rs
src/util/: fetch_page.rs  mod.rs
typings/: comic.py
util/: clientSession.py  parse.py  upload.py
(+1 files in other folders)
