[package]
name = "crawl-comic-worker"
version = "0.1.0"
edition = "2021"
default-run = "crawl-comic-worker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde_json = "1.0.113"
regex = "1.10.3"
once_cell = "1.19.0"
async-channel = "2.2.0"
rand = "0.8.5"
scraper = "0.19.0"
signal-hook = "0.3.17"
undetected-chromedriver = { git = "https://github.com/code-ga/Rust-undetected-chromedriver", version = "0.1.2" }
log = "0.4.21"
env_logger = "0.11.3"

[dev-dependencies]
image = "0.25.1"
